<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneySac</string>
    <string name="action_settings">Einstellungen</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Abbrechen</string>
    <string name="listRowTitle">Titel</string>
    <string name="detailLabelDescription">Beschreibung</string>
    <string name="detailLabelTitle">Titel</string>
    <string name="preferenceTextSize">Schriftgröße</string>
    <string name="defaultPriority">hoch</string>
    <string name="defaultPriorityTitle">Vorausgewählte Priorität</string>
    <string name="deleteButtonText">Löschen</string>
    <string name="saveButtonText">Speichern</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="strEinnahmenHead">Einnahmen:</string>
    <string name="strAusgabenHead">Ausgaben:</string>
    <string name="strEinnahmen">Einnahmen</string>
    <string name="strAusgaben">Ausgaben</string>
    <string name="strBeides">Beides</string>
    <string name="strAddIncome">+</string>
    <string name="strAddExpense">-</string>
    <string name="strAddMonth">+</string>
    <string name="name">Name</string>
    <string name="title_activity_edit_entry">EditEntryActivity</string>
    <string name="moneysac_menu_category">Kategorien</string>
    <string name="title_activity_category_list_view">Kategorien</string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>
    <string name="category_details_name_empty">Name darf nicht leer sein</string>
    <string name="saved_succesfull">Erfolgreich gespeichert!</string>
    <string name="delete">Löschen</string>
    <string name="deleted_category">Kategorie gelöscht</string>
    <string name="edit">Bearbeiten</string>
    <string name="title_activity_show_picture">ShowPictureActivity</string>
    <string name="menu_import">Importieren</string>
    <string name="menu_export">Exportieren</string>
    <string name="menu_additional">Weiteres</string>
    <string name="main_pls_select">Bitte wählen</string>
    <string name="no_file_found_to_import">Keine Datei zum importieren gefunden.</string>
    <string name="database_exported">Datenbank wurde erfolgreich exportiert.\n\n</string>
    <string name="select_import_file">Datum auswählen</string>
    <string name="database_imported">Datenbank wurde erfolgreich importiert.</string>
    <string name="strContinue">Fortfahren</string>
    <string name="cancel">Abbrechen</string>
    <string name="attention">Achtung</string>
    <string name="menu_stats">Statistik</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_stats">Statistik</string>
    <string name="title_activity_recurring_entry">RecurringEntryActivity</string>
    <string name="menu_recurring_income">Wiederk. Einkommen</string>
    <string name="menu_recurring_expense">Wiederk. Ausgabe</string>
    <string name="weekly">wöchentlich</string>
    <string name="monthly">monatlich</string>
    <string name="two_weekly">alle zwei Wochen</string>
    <string name="two_monthly">alle zwei Monate</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="settings_security">Sicherheit</string>
    <string name="settings_safe_login">Sicherer Login</string>
    <string name="settings_safe_login_summary">PIN für Login benötigt</string>
    <string name="settings_other">Weitere Einstellungen</string>
    <string name="settings_pin">PIN</string>
    <string name="settings_pin_summary">Die PIN für den sicheren Login ändern</string>

    <string-array name="recurring_intervals">
        <item name="interval_weekly">@string/weekly</item>
        <item name="interval_monthly">@string/monthly</item>
        <item name="interval_two_weekly">@string/two_weekly</item>
        <item name="interval_two_monthly">@string/two_monthly</item>
    </string-array>

    <string name="moneysac_title">MoneySac</string>
    <string name="choose_month">Monat wählen</string>
    <string name="what">"Was? "</string>
    <string name="amount">"Betrag: "</string>
    <string name="euro">€</string>
    <string name="category_text">"Kategorie: "</string>
    <string name="dateText">"Datum: "</string>
    <string name="add_photo">Foto der Rechnung anhängen</string>
    <string name="category_used">Kategorie wird noch in Einträgen verwendet</string>
    <string name="end_date_text">"Enddatum: "</string>
    <string name="start_date_text">"Startdatum: "</string>
    <string name="desc_is_required">Beschreibung darf nicht leer sein!</string>
    <string name="amount_is_required">Betrag darf nicht leer sein!</string>
    <string name="no_valid_category_selected">Es existiert keine Kategorie des passenden Types!</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="pin">PIN</string>
    <string name="athenticator_wrong_pin">Falsche PIN!</string>
    <string name="athenticator_std_pin">Die Standard-PIN ist leer </string>
    <string name="settings_pin_setup">Bitte PIN einrichten</string>
    <string name="no_statistic_data_available">Keine Daten vorhanden</string>
    <string name="oclock">Uhr</string>
    <string name="override_current_data">Dies wird ihren aktuellen Datenbestand überschreiben! Möchten sie dennoch fortfahren?</string>
    <string name="backup_could_not_be_imported">Es tut uns leid, der Stand konnte nicht wiederhergestellt werden.</string>
    <string name="could_not_delete_entry">Der Eintrag konnte leider nicht gelöscht werden</string>
    <string name="load_all_categories_not_possible">Konnte die vorhandenen Kategorien leider nicht laden</string>
    <string name="saving_entry_not_possible">Der Eintrag konnte nicht gespeichert werden!</string>
    <string name="no_image_available">Kein Bild vorhanden</string>
    <string name="saved">Gespeichert!</string>
    <string name="saving_image_not_possible">Das Bild konnte leider nicht gespeichert werden</string>
    <string name="saving_recurring_entries_not_possible">Konnte die wiederkehrenden Eintraege nicht anlegen!</string>

</resources>