<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_main_category"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/moneysac_menu_category"/>
    <item
        android:id="@+id/menu_additional"
        android:title="@string/menu_additional"
        android:titleCondensed="@string/menu_additional"
        android:orderInCategory="2">
        <menu>
            <item
                android:id="@+id/menu_main_import"
                android:icon="@drawable/import_icon"
                android:orderInCategory="1"
                android:showAsAction="never"
                android:title="@string/menu_import"/>
            <item
                android:id="@+id/menu_main_export"
                android:icon="@drawable/export_icon"
                android:orderInCategory="2"
                android:showAsAction="never"
                android:title="@string/menu_export"/>
            <item
                android:id="@+id/menu_main_stats"
                android:icon="@drawable/ic_stats"
                android:orderInCategory="3"
                android:showAsAction="never"
                android:title="@string/menu_stats"/>
            <item
                android:id="@+id/add_recurring_income"
                android:orderInCategory="4"
                android:showAsAction="never"
                android:title="@string/menu_recurring_income"/>
            <item
                android:id="@+id/add_recurring_expense"
                android:orderInCategory="4"
                android:showAsAction="never"
                android:title="@string/menu_recurring_expense"/>
        </menu>
    </item>

</menu>