<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditEntryActivity" >

    <LinearLayout
        android:id="@+id/layoutEntryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textViewEntryDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/what"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/editTextEntryDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEntryAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEntryDesc"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textViewEntryAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEntryAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/textViewEntryEuro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:text="@string/euro"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEntryCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEntryAmount"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textViewEntryCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/category_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerEntryCategory"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEntryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEntryCategory"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textViewEntryDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/dateText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonEntryDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:onClick="changeDateClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEntryDate"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/buttonUploadPicture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:onClick="takePictureOfBill"
            android:textSize="12dp"
            android:text="@string/add_photo" />

        <ImageView
            android:id="@+id/buttonShowPicture"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:src="@drawable/pictures_folder"
            android:onClick="seePictureOfBill"
            />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddEntry"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPicture"
        android:onClick="persistClicked"
        android:text="@string/strAddIncome"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>